fix: change to Debian

--- a/atuin/Dockerfile
+++ b/atuin/Dockerfile
@@ -1,17 +1,26 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-ENV LANG C.UTF-8
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    git \
+    curl \
+    pkg-config \
+    libssl-dev \
+    ca-certificates \
+    libpq-dev
 
-# Install build dependencies
-RUN apk add --no-cache git curl openssl cargo openssl-dev musl-dev
+# Install Rust (via rustup)
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+ENV PATH="/root/.cargo/bin:$PATH"
 
-# Clone and build Atuin server
-RUN git clone https://github.com/atuinsh/atuin.git /atuin \
+# Clone and build Atuin
+RUN git clone --branch v18.1.0 https://github.com/atuinsh/atuin.git /atuin \
     && cd /atuin/server \
     && cargo build --release
 
-# Create application directory
+# Copy built binary
 RUN mkdir -p /opt/atuin \
     && cp /atuin/target/release/atuin-server /opt/atuin/atuin-server
 
@@ -19,7 +28,6 @@ WORKDIR /opt/atuin
 
 # Copy startup script
 COPY run.sh /run.sh
-RUN chmod a+x /run.sh
+RUN chmod +x /run.sh
 
 CMD [ "/run.sh" ]
-
