--- a/atuin/Dockerfile
+++ b/atuin/Dockerfile
@@ -34,7 +34,7 @@ RUN apt-get update && apt-get install -y \
   netcat-traditional && \
   rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /src/atuin/target/release/atuin-server /usr/bin/atuin-server
+COPY --from=buildstage /src/atuin/target/release/atuin-server /usr/bin/atuin-server
 
 WORKDIR /opt/atuin
 
